--- a/ems_serio/Makefile
+++ b/ems_serio/Makefile
@@ -1,4 +1,4 @@
-CC=gcc
+#CC=gcc
 #CFLAGS=-I. -std=c11 -Wall -Wextra -Werror -Wstrict-aliasing -pedantic -fmax-errors=5 \
 #	-Wunreachable-code -Wcast-align -Wcast-qual -Wdisabled-optimization -Wformat=2 \
 #	-Winit-self -Wlogical-op -Wmissing-include-dirs -Wredundant-decls -Wshadow \
