Output Version string and configuration details on startup
therefore a prebuild script generates a version header with info about the actual git commit/tag/state description

--- a/ems_serio/project/.project
+++ b/ems_serio/project/.project
@@ -95,6 +95,11 @@
 			<locationURI>PARENT-1-PROJECT_LOC/tx.h</locationURI>
 		</link>
 		<link>
+			<name>code/version.h</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/version.h</locationURI>
+		</link>
+		<link>
 			<name>code/ctrl/com</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
