Use a queue to prepare messages for sending.
until now only one message could be prepared for sending by using global variables. Now a Queue is used which can hold up to 1kByte of messages.

--- a/ems_serio/project/.project
+++ b/ems_serio/project/.project
@@ -65,6 +65,16 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
+			<name>code/msg_queue.c</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/msg_queue.c</locationURI>
+		</link>
+		<link>
+			<name>code/msg_queue.h</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/msg_queue.h</locationURI>
+		</link>
+		<link>
 			<name>code/rx.c</name>
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/rx.c</locationURI>
