--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ems_serio/linuxtools"]
-	path = ems_serio/linuxtools
+[submodule "src/linuxtools"]
+	path = src/linuxtools
 	url = https://github.com/aprospero/linuxtools.git
