--- a/project/.project
+++ b/project/.project
@@ -30,6 +30,16 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
+			<name>src/args.c</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/src/args.c</locationURI>
+		</link>
+		<link>
+			<name>src/args.h</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/src/args.h</locationURI>
+		</link>
+		<link>
 			<name>src/ctrl</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
