circulation logic: reimplement in dedicated logic module.
Hard coded values:

temp threshold:  65.0°C
temp hysteresis:  8°C
interval:              20min.
duration per interval:  3min.
max circ duration:     20min.

--- a/project/.project
+++ b/project/.project
@@ -155,6 +155,16 @@
 			<locationURI>PARENT-1-PROJECT_LOC/src/ctrl/com/ems.h</locationURI>
 		</link>
 		<link>
+			<name>src/ctrl/com/logic.c</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/src/ctrl/com/logic.c</locationURI>
+		</link>
+		<link>
+			<name>src/ctrl/com/logic.h</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/src/ctrl/com/logic.h</locationURI>
+		</link>
+		<link>
 			<name>src/ctrl/com/state.c</name>
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/src/ctrl/com/state.c</locationURI>
